...
          <Button testID="LiquidToolsButton" title="Tools" onPress={() => navigation.navigate('LiquidTools', { walletID })} />
        </View>
      </ScrollView>

      <FContainer ref={walletActionButtonsRef}>
        <FButton
          testID="ReceiveButton"
          text={loc.receive.header}
          onPress={() => {
            navigation.navigate('ReceiveDetails', { walletID });
          }}
          icon={
            <View style={styles.iconContainer}>
...
